# sonic-moe

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
assets/: 2026-04-22-sonicmoe-blackwell.md
benchmarks/: bench-unsloth.py  bench_triton_moe.py  moe-cute.py  moe-token-rounding.py
sonicmoe/: __init__.py
sonicmoe/functional/: __init__.py  backward.py  forward.py  topk.py
tests/: metadata_test.py  moe_test.py
