[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sonic-moe"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nvidia-cutlass-dsl==4.4.2",
    "torch>=2.7.1,<=2.9.1",
    "quack-kernels>=0.3.11",
]

[project.optional-dependencies]
cu13 = ["nvidia-cutlass-dsl[cu13]>=4.4.2"]
dev = [
    "pre-commit",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sonicmoe*"]
exclude = ["assets*", "benchmarks*", "tests*"]

[tool.setuptools.dynamic]
version = {attr = "sonicmoe.__version__"}
