[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sonic-moe"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.7.1,<=2.9.1",
    "quack-kernels>=0.4.0",
]

[project.optional-dependencies]
cu13 = ["quack-kernels[cu13]>=0.4.0"]
dev = [
    "pre-commit",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sonicmoe*"]
exclude = ["assets*", "benchmarks*", "tests*"]

[tool.setuptools.dynamic]
version = {attr = "sonicmoe.__version__"}
